salesforce/force-app/main/default/objects/Stage_Snapshot__c/Stage_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Tracks stage changes on Opportunities with key metrics: ACV, BL Forecast Category, and Target Sign Date.</description>
    <label>Stage Snapshot</label>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>