salesforce/force-app/main/default/objects/Stage_Snapshot__c/fields/BL_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>BL_Forecast_Category__c</fullName>
    <label>BL Forecast Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>