salesforce/force-app/main/default/objects/Stage_Snapshot__c/fields/Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Modified_By__c</fullName>
    <label>Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stage_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>