salesforce/force-app/main/default/objects/Stage_Snapshot__c/fields/Target_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Sign_Date__c</fullName>
    <label>Target Sign Date</label>
    <type>Date</type>
</CustomField>